# rk-corex

./: Cargo.toml
configs/: core-x.toml  core-x.yaml
core/: Cargo.toml
core/src/: lib.rs  logger.rs
core/src/agent/: agent_manager.rs  agent_structure.rs  mod.rs
core/src/conf/: configuration_dto.rs  mod.rs  reader.rs
core/src/core/: corex.rs
core/src/core/corex/: run_method.rs
docs/: feature.md
pyagent/: Cargo.toml  pyproject.toml
pyagent/example/: agent_manager.py
pyagent/src/: lib.rs
src/: logger.rs  main.rs
src/agent/: agent_manager.rs
src/core/: corex.rs  mod.rs
transporter/: Cargo.toml
transporter/src/: lib.rs
xclient/: Cargo.toml
xclient/src/: main.rs
xrunner/: Cargo.toml
xrunner/src/: main.rs
