[package]
name = "rk-corex"
version = "0.1.0"
edition = "2021"


[lib]
name = "rk_corex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paris = "1.5.13"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.64"
futures = "0.3.26"
nanoid = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.17"