[package]
name = "transporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rk_transporter"

[dependencies]
paris = "1.5.13"
futures = "0.3.26"

tokio = { version = "1.14.0", features = ["full"] }
libp2p = { version = "0.51.0", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros"] }