[package]
name = "xrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paris = "1.5.13"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = "1.26.0"
rk-corex = { path = "../core" }